# FTDI-USB-Sensor-Interface

./: .gitignore  README.md
00-ftdi-drivers/FTDI MPSSE/Project/VisualStudio/: libmpsse.sln
00-ftdi-drivers/FTDI MPSSE/Project/VisualStudio/libmpsse.dll/: libmpsse.dll.vcxproj.filters
00-ftdi-drivers/FTDI MPSSE/Project/VisualStudio/libmpsse.lib/: libmpsse.lib.vcxproj
00-ftdi-drivers/FTDI MPSSE/Project/VisualStudio/testdll.exe/: testdll.exe.vcxproj
00-ftdi-drivers/FTDI MPSSE/Project/VisualStudio/testlib.exe/: testlib.exe.vcxproj.filters
00-ftdi-drivers/FTDI MPSSE/samples/Ambient2Click/: Ambient2Click_i2c.c
00-ftdi-drivers/FTDI MPSSE/samples/FT8xx-SPI/Example/: eve_fonts.c
00-ftdi-drivers/FTDI MPSSE/samples/GPIO_LowByte/: Makefile
00-ftdi-drivers/FTDI MPSSE/samples/GPIO_SPI/: GPIO_SPI.cpp
00-ftdi-drivers/FTDI MPSSE/samples/I2C_EEPROM/: main.c
00-ftdi-drivers/FTDI MPSSE/samples/VisualStudio/: AmbientClick2.vcxproj  GPIO_LowByte.vcxproj  GPIO_SPI.vcxproj.filters  bme280-i2c.vcxproj.filters  ft8xx-spi.vcxproj  ft8xx-spi.vcxproj.filters  samples.sln
00-ftdi-drivers/FTDI MPSSE/test/Win32/LIB/: libmpsse.lib
00-ftdi-drivers/FTDI MPSSE/test/x64/LIB/: libmpsse.lib
01-mpu6050-interface/: Cargo.toml  README.md  build.rs  data.h5  recording_20251228_165029.h5  recording_20251228_165259.h5
01-mpu6050-interface/.cargo/: config.toml
01-mpu6050-interface/Docs/: 251227-1445-mpu6050-ft232h-interface-system.md  API_QUICK_REFERENCE.md  BACKLOG.md  LIBRARY_USAGE.md  PERFORMANCE.md
01-mpu6050-interface/examples/: data_logging.rs  fifo_1khz_analysis.rs  fifo_config_check.rs  fifo_diagnostic.rs  fifo_high_speed.rs  fifo_raw_count.rs  fifo_vs_direct.rs  vibration_analysis.rs
01-mpu6050-interface/src/: common.rs  error.rs  ffi.rs  hdf5_format.rs  lib.rs  main.rs  mpu6050.rs
02-adxl355-interface/: Cargo.toml
02-adxl355-interface/.cargo/: config.toml
02-adxl355-interface/src/: adxl355.rs  error.rs  hdf5_format.rs  lib.rs  main.rs
03-adxl355-spi/: Cargo.toml  USAGE.txt
03-adxl355-spi/src/: adxl355.rs  analysis.rs  common.rs  error.rs  ffi.rs  lib.rs  main.rs
3D Files/: ADXL355Z Base.stl
Docs/: ADXL355_SPI_PROTOCOL.md  CLAUDE.md  INSTALLATION.md  KNOWN_ISSUES.md
FTDI MPSSE/: ReadMe.txt
FTDI MPSSE/Project/VisualStudio/: libmpsse.vcxproj  libmpsse.vcxproj.filters
FTDI MPSSE/Project/VisualStudio/libmpsse.dll/: libmpsse.dll.vcxproj
FTDI MPSSE/Project/VisualStudio/libmpsse.lib/: libmpsse.lib.vcxproj.filters
FTDI MPSSE/Project/VisualStudio/testlib.exe/: testlib.exe.vcxproj
FTDI MPSSE/include/: libmpsse_i2c.h
FTDI MPSSE/samples/Ambient2Click/: Makefile
FTDI MPSSE/samples/BME280-I2C/: bme280.c
FTDI MPSSE/samples/GPIO_LowByte/: gpio_lx.c
FTDI MPSSE/samples/I2C_EEPROM/: Makefile
FTDI MPSSE/samples/VisualStudio/: AmbientClick2.vcxproj.filters  GPIO_LowByte.vcxproj.filters  GPIO_SPI.vcxproj  bme280-i2c.vcxproj
FTDI MPSSE/source/: ftdi_common.h  ftdi_i2c.c
FTDI MPSSE/test/: test.c
references/: ADXL355 Register Map - PDF extracted.yaml
